--- a/BeBetterApp/BeBetterApp.csproj
+++ b/BeBetterApp/BeBetterApp.csproj
@@ -24,6 +24,12 @@
     <None Remove="GIFS\Bizep-Training\8.Reverse Grip Barbell Curls.gif" />
     <None Remove="GIFS\Bizep-Training\9.SpiderCurls.gif" />
     <None Remove="GIFS\bizeps_1.gif" />
+    <None Remove="GIFS\Schulter-Trainieren\1.SeatedBent-OverLateralRaise.gif" />
+    <None Remove="GIFS\BrustMuskel-Training\1.ChestPressMachine.gif" />
+    <None Remove="GIFS\BrustMuskel-Training\2.DeclinePushUps.gif" />
+    <None Remove="GIFS\BrustMuskel-Training\3.DumbbellBenchPress.gif" />
+    <None Remove="GIFS\BrustMuskel-Training\4.CableBenchPress.gif" />
+    <None Remove="GIFS\BrustMuskel-Training\5.ChestFlyMachine.gif" />
     <None Remove="GIFS\Trizep-Training\1.overhead-tricep-extension.gif" />
     <None Remove="GIFS\Trizep-Training\2.tricep-push-ups.gif" />
     <None Remove="GIFS\Trizep-Training\3.tricep-rope-pulldown.gif" />
@@ -96,6 +102,24 @@
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="GIFS\Bizep-Training\9.SpiderCurls.gif">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="GIFS\Schulter-Trainieren\1.SeatedBent-OverLateralRaise.gif">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="GIFS\BrustMuskel-Training\1.ChestPressMachine.gif">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="GIFS\BrustMuskel-Training\2.DeclinePushUps.gif">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="GIFS\BrustMuskel-Training\3.DumbbellBenchPress.gif">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="GIFS\BrustMuskel-Training\4.CableBenchPress.gif">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="GIFS\BrustMuskel-Training\5.ChestFlyMachine.gif">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="GIFS\Trizep-Training\1.overhead-tricep-extension.gif">
