--- a/BeBetterApp/BeBetterApp.csproj
+++ b/BeBetterApp/BeBetterApp.csproj
@@ -50,11 +50,13 @@
     <None Remove="Icons\BizepTraining.gif" />
     <None Remove="Icons\BronzeRank.png" />
     <None Remove="Icons\close.png" />
+    <None Remove="Icons\DiaRank.png" />
     <None Remove="Icons\fitness.png" />
     <None Remove="Icons\food.png" />
     <None Remove="Icons\HumanBody.png" />
     <None Remove="Icons\organisation.png" />
     <None Remove="Icons\save.png" />
+    <None Remove="Icons\SilberRank.png" />
     <None Remove="license\license.txt" />
   </ItemGroup>
 
@@ -68,6 +70,9 @@
     <PackageReference Include="LiveChartsCore.SkiaSharpView.WPF" Version="2.0.0-rc5.4" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="OpenAI" Version="2.1.0" />
+    <PackageReference Include="Serilog" Version="4.3.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
     <PackageReference Include="Syncfusion.SfSchedule.WPF" Version="18.3.0.53" />
     <PackageReference Include="Syncfusion.SfScheduler.WPF" Version="29.2.9" />
     <PackageReference Include="Syncfusion.SfSkinManager.WPF" Version="29.2.9" />
@@ -168,6 +173,9 @@
     <Resource Include="Icons\close.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Icons\DiaRank.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Icons\fitness.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
@@ -182,6 +190,9 @@
     </Resource>
     <Resource Include="Icons\save.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Icons\SilberRank.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
 
